Renamed property naming the command for running dot.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-server.port = 8000
+server.port                 = 8000
+
+graph-service.host          = 
+graph-service.prefix        = yw-graph-service
+graph-service.version       = v1
+graph-service.dot-command   = dot
