--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>org.yesworkflow</groupId>
     <artifactId>yw-graph-service</artifactId>
-    <version>0.2.1.1-SNAPSHOT</version>
+    <version>0.2.1.1</version>
     <packaging>jar</packaging>
 
     <parent>
@@ -30,7 +30,7 @@
       	<dependency>
             <groupId>org.yesworkflow</groupId>
             <artifactId>yesworkflow</artifactId>
-    		<version>0.2.1-SNAPSHOT</version>
+    		<version>0.2.1.1</version>
         </dependency>
 
     </dependencies>
